--- a/articles/vue/生命周期.md
+++ b/articles/vue/生命周期.md
@@ -1,5 +1,6 @@
 # 生命周期解析过程
-
+原文首发地址：[https://github.com/DengSongsong/Blogs/issues/14](https://github.com/DengSongsong/Blogs/issues/14)
+![](https://raw.githubusercontent.com/DengSongsong/Blogs/master/images/lifeCycle/lifecycle_meitu_1.jpg)
 ## callHook
 <p>
 生命周期其实就是在源码的某个时间点执行了callHook方法来调用vm.$options的生命周期钩子方法
@@ -408,7 +409,7 @@ Vue.prototype.$mount = function (
 
 ## mounted()
 <p>
-el 被新创建的 vm.$el 替换，并挂载到实例上去之后调用该钩子。如果 root 实例挂载了一个文档内元素，当 mounted 被调用时 vm.$el 也在文档内
+el被新创建的vm.$el替换，并挂载到实例上去之后调用该钩子。如果root实例挂载了一个文档内元素，当mounted被调用时vm.$el也在文档内
 </p>
 
 ### mountComponent
@@ -539,7 +540,7 @@ Vue.prototype._update = function (vnode: VNode, hydrating?: boolean) {
 ## updated()
 <p>
 由于数据更改导致的虚拟DOM重新渲染和打补丁，在这之后会调用该钩子。
-当这个钩子被调用时，组件DOM已经更新，所以你现在可以执行依赖于 DOM 的操作。然而在大多数情况下，你应该避免在此期间更改状态。如果要相应状态改变，通常最好使用计算属性或 watcher 取而代之。
+当这个钩子被调用时，组件DOM已经更新，所以你现在可以执行依赖于DOM的操作。然而在大多数情况下，你应该避免在此期间更改状态。如果要相应状态改变，通常最好使用计算属性或watcher取而代之。
 </p>
 
 ```
