--- a/articles/面试/日常学习记录.md
+++ b/articles/面试/日常学习记录.md
@@ -8,7 +8,7 @@
 1.	有权访问另一个函数作用域中的变量的函数，函数在当前词法作用域之外执行函数
 2.	外部函数执行后，其整个内部作用域不会被销毁，闭包阻止了这件事情的发生
 ### 三、作用域链
-1.	全部函数无法查看局部函数的内部细节，但是局部函数可以查看其上层函数细节，直到全部细节。
+1.	全局函数无法查看局部函数的内部细节，但是局部函数可以查看其上层函数细节，直到全部细节。
 2.	当需要从局部函数查找某一属性或者方法时，如果当前的作用域中没有找到，就会上溯到上层作用域查找，直至全局函数，这种组织形式就是作用域
 
 ### 四、原型链
@@ -50,10 +50,10 @@ xhr.send(null); // get方法 send null(亦或者不传,则直接是传递 header
 - readyState：存有服务器响应的状态信息。每当readyState改变时，onreadystatechange函数就会被执行
     + readyState属性可能的值：
         - 0 请求未初始化（在调用open()之前）
-        -  1 请求已提出（调用send（）之前）
-        - 请求已发送 （这里通常可以从响应得到内容头部）
-        - 请求处理中（响应中通常有部分数据可用，但是服务器还没有完成响应）
-        -  请求已完成（可以访问服务器响应并使用它）
+        - 1 请求已提出（open()已调用，调用send()之前）
+        - 2 请求已发送 （这里通常可以从响应得到内容头部）
+        - 3 请求处理中（响应中通常有部分数据可用，但是服务器还没有完成响应）
+        - 4 请求已完成（可以访问服务器响应并使用它）
 4.	XMLHttpRequest对象的方法
 - open(‘method’, ‘url’, [sayncFlag]) method可以为get、post、put  建立对服务器的调用
 - setRequestHeader(“header”,”value”) 把指定首部设置为所提供的值 设置请求头
@@ -134,7 +134,7 @@ let p = newF(P, 'amanda', 'kelake');
 2.	AMD采用的是异步方式加载模块，模块的加载不影响他后面语句的运行。所有的依赖这个模块的语句，都定义在一个回调函数中，等到加载完成之后，这个回调函数才会运行。用require.js实现AMD规范的模块化：用require.config()指定引用路径等，用define()定义模块，用require()加载模块
 3.	CMD是另一种js模块化方案，它与AMD很类似，不同点在于：AMD 推崇依赖前置、提前执行，CMD推崇依赖就近、延迟执行。此规范其实是在sea.js推广过程中产生的。
 4.	ES6中其模块功能主要由两个命令构成：export和import。export命令用于规定模块的对外接口，import命令用于输入其他模块提供的功能
-5.	ES6 模块与 CommonJS 模块的差异：1. CommonJS 模块输出的是一个值的拷贝，ES6 模块输出的是值的引用。2. CommonJS 模块是运行时加载，ES6 模块是编译时输出接口。
+5.	ES6 模块与 CommonJS 模块的差异：1. CommonJS 模块输出的是一个值的拷贝（原始类型的值会被缓存），ES6 模块输出的是值的引用（等到脚本真正执行时，再根据这个只读引用，到被加载的那个模块里面去取值）。2. CommonJS 模块是运行时加载，ES6 模块是编译时输出接口。
 ### 十一、promise
 1.	是一个对象，从它可以获取异步操作的消息，保存着某个未来才会结束的事件（通常是一个异步操作）的结果。
 2.	对象的状态不受外界影响。Promise对象代表一个异步操作，有3种状态：Pending(进行中)、Fulfilled(已成功)和Rejected(已失败)。
@@ -405,6 +405,16 @@ justify-content: center;
 ```
 ### 五、	CSS权重
 !important > 行内样式 > id > class > tag 权重可以叠加
+
+### 六、使用伪元素的好处
+1. 简化html标签，加快浏览器加载html，对SEO也是有帮助的
+2. js无法获取伪元素，不会增加js查dom的负担
+
+### 六、px、rem、em、vw，vh
+1. px：像素，相对长度单位，是相对于显示器屏幕分辨率而言的
+2. em：相对长度单位。相对与当前对象内文本的字体尺寸。如当前对行内文本的字体尺寸未被人为设置，则相对于浏览器的默认字体尺寸。继承父元素字体
+3. rem：相对长度单位。根据html根结点来计算的
+4. vw：相对于视窗（浏览器内部的可视区域大小）的宽度，视窗的宽度为100vw
 
 ## HTML
 ### 一、	meta viewport设置移动端自适应 
