--- a/articles/面试/日常学习记录.md
+++ b/articles/面试/日常学习记录.md
@@ -4,12 +4,13 @@
 1.	函数声明以关键字function开头，函数声明必须要用函数名，函数通过函数名来调用，并且函数可以在函数声明前调用，存在声明提升问题，函数声明会提升
 2.	函数表达式属于javascript语句中的一部分，变量名可以和函数名相同，函数名也可以无，函数表达式的调用必须声明后调用
 3.	声明提升，变量提升只是将定义的变量提升了，初始化的代码没有提升
+
 ### 二、闭包
 1.	有权访问另一个函数作用域中的变量的函数，函数在当前词法作用域之外执行函数
 2.	外部函数执行后，其整个内部作用域不会被销毁，闭包阻止了这件事情的发生
 ### 三、作用域链
 1.	全局函数无法查看局部函数的内部细节，但是局部函数可以查看其上层函数细节，直到全部细节。
-2.	当需要从局部函数查找某一属性或者方法时，如果当前的作用域中没有找到，就会上溯到上层作用域查找，直至全局函数，这种组织形式就是作用域
+2.	当需要从局部函数查找某一属性或者方法时，如果当前的作用域中没有找到，就会上溯到上层作用域查找，直至全局函数，这种组织形式就是作用域链
 
 ### 四、原型链
 1.	js中每一个对象都有一个内置的[prototype]属性，其属性会对其他对象的引用。
@@ -22,7 +23,7 @@
 4.	new绑定到实例对象
 
 ### 六、ajax
-1.	全称：异步 javascript 和xml ，用来和服务端进行数据交互，让无刷新替换页面数据成为了可能。
+1.	全称：异步 javascript 和 xml ，用来和服务端进行数据交互，让无刷新替换页面数据成为了可能。
 2.	核心对象XmlHttpRequest，一种支持异步请求的技术，通过它可以使用javascript向服务器提出请求并处理响应
 
 ```
