--- a/articles/面试/日常学习记录.md
+++ b/articles/面试/日常学习记录.md
@@ -27,23 +27,35 @@
 2.	核心对象XmlHttpRequest，一种支持异步请求的技术，通过它可以使用javascript向服务器提出请求并处理响应
 
 ```
-var xhr = new XMLHttpRequest(); // 声明一个请求对象
-xhr.onreadystatechange = function(){
-    if(xhr.readyState === 4){  // readyState 4 代表已向服务器发送请求
-        if(xhr.status === OK){ // // status 200 代表服务器返回成功
-            console.log(xhr.responseText); // 这是返回的文本
-        } else{
-            console.log("Error: "+ xhr.status); // 连接失败的时候抛出错误
+
+function loadXMLDoc()
+{
+	var xmlhttp;
+	if (window.XMLHttpRequest) /// 声明一个请求对象
+	{
+		//  IE7+, Firefox, Chrome, Opera, Safari 浏览器执行代码
+		xmlhttp=new XMLHttpRequest();
+	}
+	else
+	{
+		// IE6, IE5 浏览器执行代码
+		xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+	}
+	xmlhttp.onreadystatechange=function()
+	{
+		if(xhr.readyState === 4){  // readyState 4 代表已向服务器发送请求
+            if(xhr.status === OK){ // // status 200 代表服务器返回成功
+                console.log(xhr.responseText); // 这是返回的文本
+            } else{
+                console.log("Error: "+ xhr.status); // 连接失败的时候抛出错误
+            }
         }
-    }
+	}
+    // 如何设置请求头? xhr.setRequestHeader(header, value);
+    xmlhttp.setRequestHeader('Content-Type', 'application/json');
+	xmlhttp.open("GET","/try/ajax/ajax_info.txt",true);
+	xmlhttp.send();// get方法 send null(亦或者不传,则直接是传递 header) ,post 的 send 则是传递值
 }
-
-xhr.open('GET', 'xxxx');
-
-// 如何设置请求头? xhr.setRequestHeader(header, value);
-xhr.setRequestHeader('Content-Type', 'application/json');
-
-xhr.send(null); // get方法 send null(亦或者不传,则直接是传递 header) ,post 的 send 则是传递值
 ```
 
 3. XMLHttpRequest对象的三个常用属性
@@ -417,6 +429,11 @@ justify-content: center;
 3. rem：相对长度单位。根据html根结点来计算的
 4. vw：相对于视窗（浏览器内部的可视区域大小）的宽度，视窗的宽度为100vw
 
+### 七、常用css3属性
+1. word-warp 边界换行
+- normal 默认
+- break-word 内容将在边界内换行，仅用于块对象，内联对象要用的话，必须要设定height、width或display:block或position:absolute。
+
 ## HTML
 ### 一、	meta viewport设置移动端自适应 
 1.	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
@@ -530,3 +547,18 @@ html5的一种本地缓存方案，目前主要用于浏览器保存体积较大
     + 服务器代理：浏览器有跨域限制，但是服务器不存在跨域问题，所以可以由服务器请求所要域的资源再返回给客户端
     + document.domain + iframe(此方案仅限于主域相同，子域不同的跨域应用场景)：两个页面都通过强制设置document.domain为基础主域，就实现了同域
     + nginx反向代理接口跨域：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录
+
+
+## 算法
+### 一、 红黑树
+1. 每个结点要么是“红色”，要么是“黑色”(后面将说明)  
+2. 所有的叶结点都是空结点，并且是“黑色”的  
+3. 如果一个结点是“红色”的，那么它的两个子结点都是“黑色”的(注:也就是說，如果結點是黑色的，那么它的子節點可以是紅色或者是黑色的)。  
+4.  结点到其子孙结点的每条简单路径都包含相同数目的“黑色”结点  
+5. 根结点永远是“黑色”的
+6. 从根节点到叶子节点的最长的路径不多于最短的路径的长度的两倍。对于红黑树，插入，删除，查找的复杂度都是O（log N）
+### 二、希尔排序
+1. 将数组拆分为若干个子分组, 每个分组由相距一定”增量”的元素组成. 比方说将[0,1,2,3,4,5,6,7,8,9,10]的数组拆分为”增量”为5的分组, 那么子分组分别为 [0,5], [1,6], [2,7], [3,8], [4,9] 和 [5,10].
+2. 然后对每个子分组应用直接插入排序.
+3. 逐步减小”增量”, 重复步骤1,2.
+4. 直至”增量”为1, 这是最后一个排序, 此时的排序, 也就是对全数组进行直接插入排序.
